@@ -61,7 +61,7 @@ module TMail
     end
 
     def add_message_id( fqdn = nil )
-      self.message_id = ::TMail::new_msgid(fqdn)
+      self.message_id = ::TMail::new_message_id(fqdn)
     end
 
     def add_date
